--- a/src/app/modules/accept-request/accept-request.component.scss
+++ b/src/app/modules/accept-request/accept-request.component.scss
@@ -279,6 +279,7 @@ $pumaincolor:#A426D1;
 
 .covcont {
     width: 100%;
+    word-wrap: break-word;
     padding: 0px 15px;
     color: #535353;
     font-family: League Spartan;
