--- a/src/app/modules/authors/authors.component.scss
+++ b/src/app/modules/authors/authors.component.scss
@@ -316,6 +316,87 @@ color: #A426D1;
     margin-left: 10px;
   }
 
+
+  
+
+.k1 {
+  color: #A426D1;
+  font-family: League Spartan;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  margin-top: -32px;
+}
+
+.k2 {
+  color: #A426D1;
+  font-family: League Spartan;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px;
+  margin-top: 2px;
+}
+
+.k3 {
+  color: #A426D1;
+  font-family: League Spartan;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px;
+
+
+}
+
+.c1 {
+  font-family: League Spartan;
+  font-size: 20px;
+  margin-left: 139px;
+  margin-top: 5px;
+  font-style: normal;
+  font-weight: 400px;
+  line-height: 20px;
+
+
+}
+
+.c4 {
+  margin-top: 800px;
+}
+
+
+
+.d5 {
+  background-color: #A426D1;
+  border: none;
+  color: white;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: flex;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 50%;
+
+
+}
+
+.d5:hover {
+  opacity: 1
+}
+
+.circle {
+  padding-top: 6px;
+  padding-left: 10px;
+
+}
+
+
   .rrkkhrtxt {
     margin-top: 26px;
     font-family: "League Spartan", sans-serif;
