--- a/src/app/modules/authors-ongoing-jobs/authors-ongoing-jobs.component.html
+++ b/src/app/modules/authors-ongoing-jobs/authors-ongoing-jobs.component.html
@@ -2,6 +2,11 @@
 <div>
     <hr>
     <!-- <p class="recenvv12">Ongoing Jobs</p> -->
+    <div class="container">
+        <div *ngIf="!anyJobInProgress()" class="recenvv11">
+          No Ongoing Jobs are available for you!
+        </div>
+      </div>
     <div class="container" *ngFor="let Post of Posts">
    
         <div class="borderboxv11" *ngIf="Post.userId == UserData[0].id && Post.status === 'Ongoing'">
