--- a/src/app/modules/footertag/footertag.component.scss
+++ b/src/app/modules/footertag/footertag.component.scss
@@ -67,7 +67,7 @@ border: 1px solid #A426D1;
     font-style: normal;
     font-weight: 400;
     margin-left: 40px;
-    line-height: normal;
+    line-height: 35px;
   }
 
   .kksidehd1{
