--- a/src/app/modules/signup/signup.component.html
+++ b/src/app/modules/signup/signup.component.html
@@ -114,13 +114,21 @@
             <div class="crtform">
                 <input type="{{ hidePassword ? 'password' : 'text' }}"  class="int1 intem" placeholder="Password" ngModel
                  minlength="8"   name="password" #password="ngModel" [(ngModel)]="usercredential.password" required>
-                <div mat-icon-button matSuffix (click)="togglePasswordVisibility1()"
+                 <div *ngIf="password.invalid && (password.dirty || password.touched)">
+                    <div *ngIf="password.errors?.['required']" class="errormsg">
+                      Password is required.
+                    </div>
+                    <div *ngIf="password.errors?.['minlength']" class="errormsg">
+                      Password must be at least 8 characters long.
+                    </div>
+                  </div>
+                 <div mat-icon-button matSuffix (click)="togglePasswordVisibility1()"
                     [attr.aria-label]="hidePassword ? 'Hide password' : 'Show password'"
                     [attr.aria-pressed]="hidePassword" style="cursor: pointer;" > 
                     <span class="shhid2">{{ hidePassword ? 'Show Password' : 'Hide Password' }}</span>
                 </div><br>
-
             </div>
+          
 
             <div style="    width: 99%;margin-top: 18px;">
                 <mat-checkbox class="example-margin check123" name="myCheckbox" ngModel required></mat-checkbox>
@@ -481,14 +489,14 @@
                     Terms and Conditions. PubKin reserves the right to modify or terminate the Platform at any time
                     without
                     notice.</p>
-
+                    <button type="button" style="    width: 100px;
+                    height: 50px;" class="btn btnfr6" data-bs-dismiss="modal">Agree</button>
             </div>
 
             <!-- Modal footer -->
-            <div class="modal-footer">
-                <button type="button" style="    width: 100px;
-        height: 50px;" class="btn btnfr" data-bs-dismiss="modal">Agree</button>
-            </div>
+            <!-- <div class="modal-footer">
+               
+            </div> -->
 
         </div>
     </div>
