--- a/src/app/modules/signup/signup.component.scss
+++ b/src/app/modules/signup/signup.component.scss
@@ -530,6 +530,23 @@ line-height: normal;
         border: 3px solid #A426D1;
         background: #A426D1;
 }
+.btnfr6 { 
+    width: 356px;
+    gap: 8px;
+    cursor: pointer;
+    color: #FFF;
+    font-family: "League Spartan",sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    margin-top: 4px;
+    line-height: normal;
+    height: 54px;
+    border-radius: 8px;
+    border: 3px solid #A426D1;
+    background: #A426D1;
+    float: inline-end;
+}
 
 .btnfr::placeholder { 
     color: #FFF;
@@ -540,6 +557,8 @@ line-height: normal;
     color: #1C1C1C;
     font-size: 20px;
     font-weight: 400;
+    line-height: 20px;
+    text-align: justify;
 }
 
 .kkhead2tx{
